Score Lives and Tilts render

--- a/SDL Game.vcxproj
+++ b/SDL Game.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Interactable.h" />
     <ClInclude Include="ModulePhysics.h" />
+    <ClInclude Include="ModuleScore.h" />
     <ClInclude Include="p2List.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleAudio.h" />
@@ -105,6 +106,7 @@
     <ClCompile Include="ModulePlayer.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleSceneIntro.cpp" />
+    <ClCompile Include="ModuleScore.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="StoneBlock.cpp" />
