--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="Fruit.h">
       <Filter>Header Files\Interactables</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleScore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -132,6 +135,9 @@
     </ClCompile>
     <ClCompile Include="Wheel.cpp">
       <Filter>Source Files\Interactables</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleScore.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
