--- a/SDL Game.vcxproj
+++ b/SDL Game.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="p2DynArray.h" />
     <ClInclude Include="p2Point.h" />
+    <ClInclude Include="Mushroom.h" />
     <ClInclude Include="StoneBlock.h" />
     <ClInclude Include="Wheel.h" />
   </ItemGroup>
@@ -109,6 +110,7 @@
     <ClCompile Include="ModuleScore.cpp" />
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
+    <ClCompile Include="Mushroom.cpp" />
     <ClCompile Include="StoneBlock.cpp" />
     <ClCompile Include="Wheel.cpp" />
   </ItemGroup>
