--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="ModuleScore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Mushroom.h">
+      <Filter>Header Files\Interactables</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -138,6 +141,9 @@
     </ClCompile>
     <ClCompile Include="ModuleScore.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mushroom.cpp">
+      <Filter>Source Files\Interactables</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
